Fixed facelist with a scrollbar

--- a/CSS/popup.css
+++ b/CSS/popup.css
@@ -12,36 +12,66 @@
     max-height: 400px;
     -webkit-user-select: none;
 }
+
 header {
     padding-top: 15px;
     padding-bottom: 10px;
 }
-.profile-row{
-    padding-top:5px;
-    padding-bottom:5px;
-    padding-left:5px;
-    padding-right:5px;
+
+.facesDivScroll {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 200px;
+    padding-right:10px;
 }
-li{
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 6px;
+    background: rgba(0, 60, 255, 0.50); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
+.profile-row {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+li {
     border-style: dashed;
     border-width: 2px 0px 0px 0px;
-    border-color:rgba(0, 0, 0, 0.66);
+    border-color: rgba(0, 0, 0, 0.66);
 }
-li:last-of-type{
-    border-width: 2px 0px 2px 0px;
+
+    li:last-of-type {
+        border-width: 2px 0px 2px 0px;
+    }
+
+.list-checked {
+    background: rgba(0, 184, 254, 0.30);
 }
-.list-checked{
-    background:rgba(0, 184, 254, 0.30);
+
+.btn-delete {
+    background: rgba(255, 58, 58, 0.80);
 }
-.btn-delete{
-    background:rgba(255, 58, 58, 0.80);
+
+    .btn-delete:disabled {
+        background: rgba(189, 189, 189, 0.32);
+    }
+
+.btn-div {
+    padding: 10px;
 }
-.btn-delete:disabled{
-    background:rgba(189, 189, 189, 0.32);
-}
-.btn-div{
-    padding:10px;
-}
-body{
+
+body {
     background-image: url("/images/paper.png");
 }
